Add References Between Projects (ASP, DAL, BLL)

--- a/ASP-MVC/ASP-MVC.csproj
+++ b/ASP-MVC/ASP-MVC.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Documentation\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj" />
+  </ItemGroup>
+
 </Project>
